--- a/css/rankings.css
+++ b/css/rankings.css
@@ -473,7 +473,7 @@ a.wowhead del {
    Rankings & Talent Display
    ================================================================= */
 #rankings {
-  --cols: 36px 1fr 90px 64px 170px 140px 66px 42px 62px;
+  --cols: 36px 150px 100px 64px 170px 1fr 66px 46px 62px;
   margin-top: 0;
   min-height: 400px;
 }
@@ -1010,7 +1010,7 @@ a.wowhead del {
 
   /* Mobile: hide server/time, compact layout */
   #rankings {
-    --cols: 28px 1fr 70px 50px 140px 0px 0px 36px 54px;
+    --cols: 28px 1fr 70px 50px 130px 0px 0px 36px 54px;
   }
 
   .col-server,
