--- a/css/addons.css
+++ b/css/addons.css
@@ -10,6 +10,10 @@
   padding: 4rem 2rem;
 }
 
+.addons-section:first-of-type {
+  padding-bottom: 1.5rem;
+}
+
 .page-header {
   text-align: center;
   margin-bottom: 0;
